bug: make header stick to top of content so there isn't a gap

--- a/corehq/apps/hqwebapp/static/cloudcare/scss/formplayer-webapp/case-tile.scss
+++ b/corehq/apps/hqwebapp/static/cloudcare/scss/formplayer-webapp/case-tile.scss
@@ -132,6 +132,7 @@
     border-right-width: 5px;
   }
 
+  .sticky-header,
   .sticky-map {
     top: 0px;
   }
